			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.1759 2001/07/05 23:34:54 itojun Exp $

<200107>
Fri Jul  6 08:33:30 JST 2001  itojun@iijlab.net
	* sys/netinet/ip6.h: IP6_EXTHRD_GET0() did not check the mbuf length,
	  when off == 0.  noone was using this macro.

2001-07-05  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/sys/net/if_tun.c (tunifioctl): returned EAFNOSUPPORT if
	the SIOCSIFADDR command is issued for an unsupported address
	family (i.e. all AFs except AF_INET).  This helps the IPv6 layer
	detect the unavailability of the interface before going further on
	initialization, and, as a result, suppress unexpected warning
	messages.

Wed Jul  4 16:02:26 JST 2001  itojun@iijlab.net
	* openbsd/usr.sbin/inetd/inetd.c: correct UDP source address checks.
	  2.9 code did not check it for IPv6 traffic.  sync with openbsd.

2001-07-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c: when the GAI_USE_ORDERING
	environment variable is set, reorder the chain that getaddrinfo(3)
	would return, based on the logic described in
	draft-ietf-ipngwg-default-addr-select.  With this extension,
	things would be happier when
	+ the underlying kernel supports IPv6,
	+ "the default interface" is specified by the "ndp -I" command,
	+ there is no router around the node,
	+ the destination node has both AAAA (or A6) and A resource
	  records, and
	+ the application just tries to connect to all the entries that
	  getaddrinfo(3) returns.
	XXX: items to be considered:
	- some of the logic is not implemented.
	- this routine opens a socket to get the corresponding source
	  address for each destination candidate.  This might cause
	  performance effect.
	
2001-07-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/sys/netinet/in_proto.c (inetsw[]): corrected the sysctl
	callback function for net.inet.ip6.XXX names (from icmp6_sysctl to
	ip6_sysctl).

Mon Jul  2 20:06:28 JST 2001  itojun@iijlab.net